// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Spec Snapshots should render a filled and disabled input 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #332C3A;
  border: 2px solid #D8D6DB;
  background: #FFFFFF;
  opacity: 0.5;
}

.c2::placeholder {
  color: #727683;
}

.c2:hover {
  background: #D8D6DB;
}

.c2:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c2:hover {
  background: #FFFFFF;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="false"
      class="c2"
      disabled=""
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an empty and disabled input 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #332C3A;
  border: 2px solid #D8D6DB;
  background: #FFFFFF;
  opacity: 0.5;
}

.c2::placeholder {
  color: #727683;
}

.c2:hover {
  background: #D8D6DB;
}

.c2:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c2:hover {
  background: #FFFFFF;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="false"
      class="c2"
      disabled=""
      id="id"
      name=""
      placeholder="Placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input of type email 1`] = `
.c2 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #332C3A;
  border: 2px solid transparent;
}

.c3::placeholder {
  color: #727683;
}

.c3:hover {
  background: #D8D6DB;
}

.c3:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#8D919B"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="email"
      value="hello@gmail.com"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input of type number 1`] = `
.c2 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #332C3A;
  border: 2px solid transparent;
}

.c3::placeholder {
  color: #727683;
}

.c3:hover {
  background: #D8D6DB;
}

.c3:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#8D919B"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="number"
      value="3"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input with an error 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #332C3A;
  background: #FFE7E6;
  border: 2px solid transparent;
}

.c2::placeholder {
  color: #727683;
}

.c2:hover {
  background: #D8D6DB;
}

.c2:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c2:hover {
  background: #FDCAC3;
}

.c2:focus {
  border: 2px solid #FC4F4A;
  background: #FFFFFF;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="true"
      class="c2"
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input with an icon 1`] = `
.c2 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #ECEAF1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #332C3A;
  border: 2px solid transparent;
}

.c3::placeholder {
  color: #727683;
}

.c3:hover {
  background: #D8D6DB;
}

.c3:focus {
  border: 2px solid #7989F7;
  background: #FFFFFF;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#8D919B"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;
